export interface Section {
  key: string;
  content: string[];
}
