@startuml parser_diagram

interface Parser {
    +parse(chartFile: string): Chart
}

class ChartParser implements Parser {
    -requiredSections: string[]
    +parse(chartFile: string): Chart
    -loadChartFile(chartFilePath: string): string
    -validateChartFile(content: string): boolean
    -parseSections(content: string): Section[]
    -parseSong(data: string): Song
    -parseModes(sections: Section[]): Mode[]
    -parseNotes(data: string): Note[]
}

interface Section {
    +key: string
    +content: string[]
}

interface Chart {
    +song: Song
    +modes: Mode[]
}

interface Mode {
    +difficulty: string
    +notes: Note[]
}

interface Song {
    +name: string
    +artist: string
    +offset: number
    +resolution: number
    +musicStream: string
}

interface Note {
    +time: number
    +fret: number
    +duration: number
}

Chart o-- Song
Chart o-- Mode
Mode o-- Note
ChartParser --> Section
ChartParser -right-> Chart

@enduml
